src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import '@fontsource-variable/space-grotesk';

@layer base {
	body {
		@apply bg-black text-white bg-dotted-zinc-900 bg-dotted-spacing-5;
	}

	* {
		@apply md:cursor-none;
		@apply selection:bg-zinc-900 selection:text-zinc-400;
	}

	p {
		@apply inline text-zinc-400;
	}

	*:has(.inline) {
		@apply text-justify;
	}
}

[data-ui='NextStudioLayout'] * {
	cursor: auto !important;
}

